--- a/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
@@ -31,15 +31,20 @@
 border:none;
 }
 
-#wLeftPaneNS
+#wLeftPaneNS, #footer
 {
 background-color: #F7F7F7; /*colorToken.surface-1*/
+}
+
+#wRightPaneNS
+{
+background-color: #FFFFFF; /*colorToken.page-background*/
 }</string>
   </property>
   <property name="TOKENIZED" stdset="0">
    <bool>true</bool>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_15" stretch="0,1">
+  <layout class="QHBoxLayout" name="horizontalLayout_15" stretch="0,0">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -391,16 +396,6 @@ background-color: #F7F7F7; /*colorToken.surface-1*/
          <property name="bottomMargin">
           <number>0</number>
          </property>
-         <item>
-          <widget class="QCheckBox" name="cbAlwaysUploadToLocation">
-           <property name="text">
-            <string>Always upload to this destination</string>
-           </property>
-           <property name="type" stdset="0">
-            <string notr="true">mega</string>
-           </property>
-          </widget>
-         </item>
         </layout>
        </widget>
       </item>
@@ -408,16 +403,158 @@ background-color: #F7F7F7; /*colorToken.surface-1*/
     </widget>
    </item>
    <item>
-    <widget class="QStackedWidget" name="stackedWidget">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="currentIndex">
-      <number>-1</number>
-     </property>
+    <widget class="QWidget" name="wRightPaneNS" native="true">
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QStackedWidget" name="stackedWidget">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="currentIndex">
+         <number>-1</number>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QWidget" name="footer" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_5">
+         <property name="spacing">
+          <number>23</number>
+         </property>
+         <property name="leftMargin">
+          <number>20</number>
+         </property>
+         <property name="topMargin">
+          <number>21</number>
+         </property>
+         <property name="rightMargin">
+          <number>20</number>
+         </property>
+         <property name="bottomMargin">
+          <number>21</number>
+         </property>
+         <item>
+          <widget class="QWidget" name="bLayout" native="true">
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_4">
+            <property name="spacing">
+             <number>8</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QCheckBox" name="cbAlwaysUploadToLocation">
+              <property name="text">
+               <string>Always upload to this destination</string>
+              </property>
+              <property name="type" stdset="0">
+               <string notr="true">mega</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QPushButton" name="bCancel">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
+              <property name="text">
+               <string>Cancel</string>
+              </property>
+              <property name="type" stdset="0">
+               <string notr="true">secondary</string>
+              </property>
+              <property name="dimension" stdset="0">
+               <string notr="true">small</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="bOk">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
+              <property name="text">
+               <string>OK</string>
+              </property>
+              <property name="type" stdset="0">
+               <string notr="true">primary</string>
+              </property>
+              <property name="dimension" stdset="0">
+               <string notr="true">small</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
